# Theorem harness HTTP transport.
#
# A thin JSON/REST surface over theorem-harness-runtime: serves runs and their
# event logs to the Theorem clients (the iOS app's RemoteHarnessRunStore, the
# future web client). This is exposure #2 from the ios-transport-handoff: the
# HTTP transport that makes the run surfaces go live. Codex owns exposure #1
# (wiring coordination into rustyred-thg-mcp); this crate is the parallel lane.
#
# Workspace placement: its OWN Cargo root (bare `[workspace]` at the bottom),
# NOT a member of rustyredcore_THG. Path-deps INTO the harness crates and THG
# core. Mirrors apps/theorem-grpc and reconstruction-engine. Build/test here via
# `cargo build` / `cargo test` from this dir.

[package]
name = "theorem-harness-server"
version = "0.0.0"
edition = "2021"
publish = false
description = "JSON/HTTP transport over theorem-harness-runtime: serves runs and events to the Theorem clients."
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
# BroadcastStream adapts the push bus receiver into the SSE response stream.
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "9", features = ["use_pem"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }

theorem-harness-runtime = { path = "../../rustyredcore_THG/crates/theorem-harness-runtime" }
theorem-harness-core = { path = "../../rustyredcore_THG/crates/theorem-harness-core" }
theorem-dispatch = { path = "../../rustyredcore_THG/crates/theorem-dispatch" }
rustyred-thg-core = { path = "../../rustyredcore_THG/crates/rustyred-thg-core" }
rustyred-thg-code = { path = "../../rustyredcore_THG/crates/rustyred-thg-code" }
rustyred-thg-affordances = { path = "../../rustyredcore_THG/crates/rustyred-thg-affordances" }
rustyred-thg-connectors = { path = "../../rustyredcore_THG/crates/rustyred-thg-connectors" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lib]
name = "theorem_harness_server"
path = "src/lib.rs"

[[bin]]
name = "theorem-harness-server"
path = "src/main.rs"

# Standalone workspace root: own Cargo.lock, out of the parent members.
[workspace]
