[package]
name = "theorem-substrate-sync"
version = "0.1.0"
edition = "2021"
description = "Local-to-hosted Theorem substrate sync daemon."

[[bin]]
name = "theorem-substrate-sync"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyred-thg-core = { path = "../../rustyredcore_THG/crates/rustyred-thg-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
tower = "0.5"

[workspace]
