[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
theorem-receiver = { path = "../../../rustyredcore_THG/crates/theorem-receiver" }
rustyred-thg-server = { path = "../../../rustyredcore_THG/crates/rustyred-thg-server" }
commonplace-api = { path = "../../commonplace-api" }
# Bundled ambient watcher: a fresh download runs the file watcher (with its
# durable commonplace ingest + ambient passes) over the working tree with no
# separate install. Spawned on a background thread in setup, stopped on shutdown.
commonplace-desktop-runtime = { path = "../../commonplace-desktop-runtime" }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
