[package]
name = "design-check"
version = "0.1.0"
edition = "2021"
description = "Static design-engineering checker and skill-pack payload for Theorem harness design systems."
license = "MIT"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "design-check"
path = "src/bin/design-check.rs"
