[package]
name = "ensemble"
version = "0.1.0"
edition = "2021"
description = "Ensemble: the capability-pack registry, budgeted selector, and trust ladder over RustyRedCore-THG. The pack-level layer above rustyred-thg-affordances (tools) and theorem-harness-runtime::skill_pack (one kind)."
license = "MIT"
rust-version = "1.85"

[dependencies]
rustyred-thg-core = { path = "../rustyred-thg-core" }
rustyred-thg-affordances = { path = "../rustyred-thg-affordances" }
theorem-harness-core = { path = "../theorem-harness-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
