[package]
name = "rustyred-code-embedding"
version = "0.1.0"
edition = "2021"
description = "Shared code embedding seam for RustyRed file and CodeCrawler write paths."
license = "MIT"
rust-version = "1.85"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.22.2", optional = true }
hf-hub = { version = "0.5", optional = true }

[features]
default = []
http = ["dep:reqwest"]
local = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]
