[package]
name = "rustyred-hipporag"
version = "0.1.0"
edition = "2021"
description = "HippoRAG 2 candidate generation with RAPTOR-style graph hubs for RustyRed THG."
license = "MIT"
rust-version = "1.85"

[dependencies]
blake3 = "1.8.5"
futures-util = "0.3.31"
rustyred-membrane = { path = "../rustyred-membrane" }
rustyred-thg-core = { path = "../rustyred-thg-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt"] }
