[package]
name = "rustyred-membrane"
version = "0.1.0"
edition = "2021"
description = "Shared context admission and eviction membrane for RustyRed graph-backed context."
license = "MIT"
rust-version = "1.85"

[features]
default = []
# Graph-backed lossless overflow recovery (recover.rs): persist deferred
# context byte-exact and recover via `context_fetch`, plus receipt graph-emit.
# Off by default so the membrane stays a pure cache-mechanics crate.
graph-store = ["dep:rustyred-thg-core"]

[dependencies]
blake3 = "1.8.5"
rustyred-thg-core = { path = "../rustyred-thg-core", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
